--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,14 @@
 [project]
 name = "coastal-monitoring-client"
 version = "0.1.0"
-description = "Python client for the coastalmonitoring.org APIe"
+description = "Python client for the coastalmonitoring.org API"
 readme = "README.md"
 authors = [
     { name = "Sam Northover-Naylor" }
 ]
 requires-python = ">=3.11"
 dependencies = [
+    "pandas>=2.2.3",
     "pydantic>=2.10.4",
     "requests>=2.32.3",
 ]
@@ -16,6 +17,7 @@ dependencies = [
 dev = [
     "coverage>=7.6.10",
     "mypy>=1.14.1",
+    "pandas-stubs>=2.2.3.241126",
     "poethepoet>=0.32.0",
     "pytest>=8.3.4",
     "responses>=0.25.3",
