--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -6,6 +6,9 @@ on:
       - main
     paths-ignore:
       - 'README.md'
+  pull_request:
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
